@@ -63,6 +63,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Split out a base listing view from generic index view (Matt Westcott)
  * Update type hints in admin/ui/components.py so that `parent_context` is mutable (Andreas Nüßlein)
  * Deprecate `UserPagePermissionsProxy` (Sage Abdullah)
+ * Optimise the Settings context processor to avoid redundantly finding a Site to improve cache ratios (Jake Howard)
 
 
 ## Upgrade considerations
